# Haskell-Training

./: README.md
assignments/a/: A.hs
assignments/b/: B.hs
assignments/c/: C.hs
assignments/d/: D.hs
assignments/e/: e.cabal
assignments/f/: F.hs  f.cabal
assignments/x/: Mastermind.hs
mycodes/monads/: LICENSE  monads.cabal
mycodes/monads/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
mycodes/monads/src/: MyLib.hs
mycodes/package-demo/: LICENSE  hie.yaml  package-demo.cabal
mycodes/package-demo/abc/: test.txt
mycodes/package-demo/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
mycodes/package-demo/src/: MyLib.hs
mypractice/: Accumulators.hs  Basics.hs  Composition.hs  Datatypes.hs  Deriving.hs  Folds.hs  Functions.hs  FunctorFoldable.hs  IO.hs  IO2.hi  IO2.hs  IO3.hs  InteractionTree.hs  MapFilterIO.hs  Monomorphism.hs  MyA.hs  MyB.hs  MyC.hs  MyD.hs  Numbers.hs  Overloading.hs  Pair.hs  Parametricity.hs  UnsafeIO.hs  myE.hs
mypractice/txtfiles/: first.txt  second.txt
