cabal-version:   3.0
name:            monads
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Madhur Aggarwal
maintainer:      madhur.aggarwal@juspay.in
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.17.2.1, 
                      containers ^>= 0.6.5,
                      transformers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite monads-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        monads
